Fix 0.14 first, before moving onto 0.15. New wrappers :-(

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -76,7 +76,7 @@
 			</filter>-->
 
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="INFO"/>
+				<levelMin value="DEBUG"/>
 				<levelMax value="FATAL"/>
 			</filter>
 
