--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -52,7 +52,7 @@ PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PluginDirectory=..\..\..\TestPlugin\bin\Release;
 PluginDirectory=..\..\..\TestPlugin\bin\Debug;
 
-#PluginDisabled=true
+PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #Pets.Enabled=false
