--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -13,8 +13,8 @@ port=19134
 
 #EnableStatistics=true
 motd=§6§l» §6gurun§7HackingServer§6§l «
-WorldProvider=anvil
-#WorldProvider=flat
+#WorldProvider=anvil
+WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=22
 GameMode=Survival
