--- a/src/MiNET/MiNET.Test/packages.config
+++ b/src/MiNET/MiNET.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="fNbt" version="0.6.3" targetFramework="net45" />
+  <package id="jose-jwt" version="1.9.2" targetFramework="net46" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
