Fix old RakNet left-overs. Not reading packets complete or correct. No impact.

--- a/src/MiNET/MiNET.Client/App.config
+++ b/src/MiNET/MiNET.Client/App.config
@@ -53,7 +53,7 @@
 		<root>
 			<appender-ref ref="Console"/>
 			<appender-ref ref="RollingFile" />
-			<appender-ref ref="DebuggerAppender"/>
+			<!--<appender-ref ref="DebuggerAppender"/>-->
 		</root>
 	</log4net>
 
