Fix server.conf under Linux

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -49,8 +49,8 @@ PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.station
 
 #EnableSecurity=true
-#PluginDirectory=..\..\..\TestPlugin\bin\Release;
-PluginDirectory=..\..\..\TestPlugin\bin\Debug;
+#PluginDirectory=../../../TestPlugin/bin/Release;
+PluginDirectory=../../../TestPlugin/bin/Debug;
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
