--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,6 +1,6 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
-#port=19134
+port=19134
 
 #ForwardAllPlayers=true
 #ForwardIP=147.75.194.126
@@ -13,15 +13,15 @@
 
 #EnableStatistics=true
 motd=§6§l» §6gurun§7HackingServer§6§l «
-#WorldProvider=anvil
-WorldProvider=flat
+WorldProvider=anvil
+#WorldProvider=flat
 ViewDistance=11
-MaxViewDistance=22
-GameMode=Survival
-#GameMode=Creative
+MaxViewDistance=11
+#GameMode=Survival
+GameMode=Creative
+Difficulty=Peaceful
 #Difficulty=Easy
-#Difficulty=Peaceful
-Difficulty=Normal
+#Difficulty=Normal
 
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWaterOffset=30
