Rename to xperience level.

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -16,9 +16,9 @@ motd=§6§l» §6gurun§7HackingServer§6§l «
 WorldProvider=anvil
 #WorldProvider=flat
 ViewDistance=11
-MaxViewDistance=11
-#GameMode=Survival
-GameMode=Creative
+MaxViewDistance=3
+GameMode=Survival
+#GameMode=Creative
 Difficulty=Peaceful
 #Difficulty=Easy
 #Difficulty=Normal
