Abstract logic for the creation of package event handlers.
Implement two default generators:
a) ReflectionPackageHandlerGenerator
   - Utilises classes found in the System.Reflection namespace to invoke methods.
b) EmittedPackageHandlerGenerator
   - Utilises classes found in the System.Reflection.Emit namespace to directly invoke handler methods where possible.
   - Returns NOP implementations of IPackageEventHandler where methods cannot be invoked.

See `src/MiNET/MiNET.Test/BenchmarkEventHandlerGenerators.cs` for simple benchmarks.

EmittedPackageHandlerGenerator requires the ability to generate MSIL on-the-fly and thus may not work on restricted or non-standard systems,
if people begin reporting they are unable to use it then I shall add a simple test to determine which IPackageEventHandlerGenerator is used.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -452,6 +452,7 @@
     <Compile Include="PlayerFactory.cs" />
     <Compile Include="PlayerNetworkSession.cs" />
     <Compile Include="Plugins\Attributes\AuthorizeAttribute.cs" />
+    <Compile Include="Plugins\IPackageEventHandlerGenerator.cs" />
     <Compile Include="Plugins\IStartup.cs" />
     <Compile Include="Plugins\Plugin.cs" />
     <Compile Include="Plugins\Attributes\CommandAttribute.cs" />
