--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,6 +1,6 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
-port=19134
+#port=19134
 
 #ForwardAllPlayers=true
 #ForwardIP=147.75.194.126
@@ -16,9 +16,10 @@ motd=§6§l» §6gurun§7HackingServer§6§l «
 WorldProvider=anvil
 #WorldProvider=flat
 ViewDistance=11
-MaxViewDistance=3
-GameMode=Survival
-#GameMode=Creative
+MaxViewDistance=8
+MoveRenderDistance=1
+#GameMode=Survival
+GameMode=Creative
 Difficulty=Peaceful
 #Difficulty=Easy
 #Difficulty=Normal
@@ -40,11 +41,14 @@ Difficulty=Peaceful
 #PCWaterOffset=65
 #PCWorldFolder=D:\Development\Worlds\Gladiator Arena by Hypixel\Gladiator Arena - No Counters (Slow Computers)
 #PCWaterOffset=49
+#PCWorldFolder=D:\Downloads\Phain\Phain
 
 # GOOD HUBS
 PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
+
+#PCWorldFolder=D:\Development\Worlds\World1\World1
 
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.station
 
