Fix better ordering. Now running with plugins.

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -18,8 +18,8 @@ WorldProvider=anvil
 ViewDistance=11
 MaxViewDistance=8
 MoveRenderDistance=1
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 Difficulty=Peaceful
 #Difficulty=Easy
 #Difficulty=Normal
@@ -56,7 +56,7 @@ PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PluginDirectory=../../../TestPlugin/bin/Release;
 PluginDirectory=../../../TestPlugin/bin/Debug;
 
-PluginDisabled=true
+#PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #Pets.Enabled=false
