--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -83,7 +83,7 @@
 		</appender>
 
 		<root>
-			<level value="DEBUG"/>
+			<level value="WARN"/>
 			<appender-ref ref="Console"/>
 			<appender-ref ref="RollingFile"/>
 			<!--<appender-ref ref="DebuggerAppender"/>-->
