Refactor of login. Now full object model and a bit more validation. To be continued.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Blocks\Tnt.cs" />
     <Compile Include="Blocks\Wool.cs" />
     <Compile Include="CertificateChain.cs" />
+    <Compile Include="CertificateData.cs" />
     <Compile Include="ConnectionState.cs" />
     <Compile Include="Crafting\Recipe.cs" />
     <Compile Include="Effects\Absorption.cs" />
