--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -511,7 +511,19 @@
     <Compile Include="Security\User.cs" />
     <Compile Include="ServerInfo.cs" />
     <Compile Include="SessionManager.cs" />
+    <Compile Include="Sounds\AnvilBreakSound.cs" />
+    <Compile Include="Sounds\AnvilFallSound.cs" />
+    <Compile Include="Sounds\AnvilUseSound.cs" />
+    <Compile Include="Sounds\BlazeFireballSound.cs" />
+    <Compile Include="Sounds\CameraTakePictureSound.cs" />
+    <Compile Include="Sounds\ClickFailSound.cs" />
+    <Compile Include="Sounds\DoorCloseSound.cs" />
+    <Compile Include="Sounds\ExperienceOrbSound.cs" />
+    <Compile Include="Sounds\FizzSound.cs" />
+    <Compile Include="Sounds\GhastSound.cs" />
+    <Compile Include="Sounds\ShootSound.cs" />
     <Compile Include="Sounds\Sound.cs" />
+    <Compile Include="Sounds\ClickSound.cs" />
     <Compile Include="Utils\BoundingBox.cs" />
     <Compile Include="Utils\ChunkCoordinates.cs" />
     <Compile Include="Utils\ConcurrentPriorityQueue.cs" />
