fix startup error

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -15,7 +15,7 @@ UseEncryption=true
 
 #EnableStatistics=true
 motd=§6§l» §6gurun§7HackingServer§6§l «
-WorldProvider=anvil
+#WorldProvider=anvil
 #WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
@@ -46,7 +46,7 @@ Difficulty=Peaceful
 #PCWorldFolder=D:\Downloads\Phain\Phain
 
 # GOOD HUBS
-PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
