--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -16,7 +16,7 @@ UseEncryption=true
 #EnableStatistics=true
 motd=§6§l» §6gurun§7HackingServer§6§l «
 #WorldProvider=anvil
-#WorldProvider=flat
+WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
 MoveRenderDistance=1
