--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,64 +1,29 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
-port=19134
+port=19132
 
-#ForwardAllPlayers=true
-#ForwardIP=147.75.194.126
-#ForwardPort=19132
+ForwardAllPlayers=false
+ForwardIP=127.0.0.1
+ForwardPort=19132
 
 # Throttling
-#MaxNumberOfPlayers=1
+MaxNumberOfPlayers=50
 #MaxNumberOfConcurrentConnects=1
-#InactivityTimeout=2000
+InactivityTimeout=8500
 
 UseEncryption=true
 
 #EnableStatistics=true
-motd=§6§l» §6gurun§7HackingServer§6§l «
+motd=Test server
 #WorldProvider=anvil
 WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
 MoveRenderDistance=1
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 Difficulty=Peaceful
 #Difficulty=Easy
 #Difficulty=Normal
 
-#PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
-#PCWaterOffset=30
-#PCWorldFolder=D:\Development\Worlds\MiniGames\Capture the flag
-#PCWorldFolder=D:\Development\Worlds\MiniGames\Castle Wars
-#PCWorldFolder=D:\Development\Worlds\MiniGames\King of the hill
-#PCWorldFolder=D:\Development\Worlds\MiniGames\Pirate battle
-#PCWorldFolder=D:\Development\Worlds\ShatteredPVP
-#PCWorldFolder=D:\Development\Worlds\KingsLanding
-#PCWorldFolder=D:\Downloads\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama
-#PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
-#PCWorldFolder=D:\Development\Worlds\Greenfield v0.4.5
-#PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
-#PCWaterOffset=55
-#PCWorldFolder=D:\Development\Worlds\Sky Wars 2.0 By JJtCool
-#PCWaterOffset=65
-#PCWorldFolder=D:\Development\Worlds\Gladiator Arena by Hypixel\Gladiator Arena - No Counters (Slow Computers)
-#PCWaterOffset=49
-#PCWorldFolder=D:\Downloads\Phain\Phain
-
-# GOOD HUBS
-#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
-#PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
-#PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
-
-#PCWorldFolder=D:\Development\Worlds\World1\World1
-
-#PCWorldFolder=D:\Development\Repos\MapsPE\sg.station
-
 #EnableSecurity=true
-#PluginDirectory=../../../TestPlugin/bin/Release;
-PluginDirectory=../../../TestPlugin/bin/Debug;
-
-#PluginDisabled=true
-#NiceLobby.Enabled=false
-#CoreCommands.Enabled=false
-#Pets.Enabled=false
