Fix first few packets through queue.

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -11,14 +11,19 @@ port=19134
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-UseEncryption=true
+MinWorkerThreads=1000
+MinCompletionPortThreads=1000
+
+#UseEncryption=false
+
 
 #EnableStatistics=true
-motd=§6§l» §6gurun§7HackingServer§6§l «
+#motd=§6§l» §6gurun§7HackingServer§6§l «
+motd=§6§lgurun§r§7Hacking
 WorldProvider=anvil
 #WorldProvider=flat
-ViewDistance=11
-MaxViewDistance=8
+ViewDistance=10
+MaxViewDistance=5
 MoveRenderDistance=1
 GameMode=Survival
 #GameMode=Creative
@@ -44,6 +49,7 @@ Difficulty=Peaceful
 #PCWorldFolder=D:\Development\Worlds\Gladiator Arena by Hypixel\Gladiator Arena - No Counters (Slow Computers)
 #PCWaterOffset=49
 #PCWorldFolder=D:\Downloads\Phain\Phain
+#PCWorldFolder=D:\Development\Worlds\stampy-_2_\Stampy's Lovely World
 
 # GOOD HUBS
 PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
