Revert "Fix first few packets through queue."
This reverts commit 3169e9d16af52f253b57aec5f12eac25d35540c4.

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -11,19 +11,14 @@ port=19134
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-MinWorkerThreads=1000
-MinCompletionPortThreads=1000
-
-#UseEncryption=false
-
+UseEncryption=true
 
 #EnableStatistics=true
-#motd=§6§l» §6gurun§7HackingServer§6§l «
-motd=§6§lgurun§r§7Hacking
+motd=§6§l» §6gurun§7HackingServer§6§l «
 WorldProvider=anvil
 #WorldProvider=flat
-ViewDistance=10
-MaxViewDistance=5
+ViewDistance=11
+MaxViewDistance=8
 MoveRenderDistance=1
 GameMode=Survival
 #GameMode=Creative
@@ -49,7 +44,6 @@ Difficulty=Peaceful
 #PCWorldFolder=D:\Development\Worlds\Gladiator Arena by Hypixel\Gladiator Arena - No Counters (Slow Computers)
 #PCWaterOffset=49
 #PCWorldFolder=D:\Downloads\Phain\Phain
-#PCWorldFolder=D:\Development\Worlds\stampy-_2_\Stampy's Lovely World
 
 # GOOD HUBS
 PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
