--- a/src/MiNET/MiNET.Client/App.config
+++ b/src/MiNET/MiNET.Client/App.config
@@ -18,7 +18,7 @@
 				<!--<conversionPattern value="%newline%file (%line): %level: %message%newline"/>-->
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="DEBUG"/>
+				<levelMin value="WARN"/>
 				<levelMax value="FATAL"/>
 			</filter>
 		</appender>
@@ -30,7 +30,7 @@
 				<conversionPattern value="%5level [%.10class] - %message%newline"/>
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
-				<levelMin value="INFO"/>
+				<levelMin value="WARN"/>
 				<levelMax value="FATAL"/>
 			</filter>
 		</appender>
@@ -51,6 +51,7 @@
 		</appender>
 
 		<root>
+			<level value="DEBUG"/>
 			<appender-ref ref="Console"/>
 			<appender-ref ref="RollingFile" />
 			<!--<appender-ref ref="DebuggerAppender"/>-->
