Now using "faster" thread pool. It's not exactly faster, but seems to behave better than the defualt .NET one. Fix: Client spam empty item drops when closing inventory.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -331,6 +331,7 @@
     <Compile Include="Entities\Projectiles\Projectile.cs" />
     <Compile Include="Entities\Vehicles\Minecart.cs" />
     <Compile Include="GreyListManager.cs" />
+    <Compile Include="Helios.Concurrency.DedicatedThreadPool.cs" />
     <Compile Include="HungerManager.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="InventoryManager.cs" />
