--- a/src/MiNET/MiNET/packages.config
+++ b/src/MiNET/MiNET/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="fNbt" version="0.6.3" targetFramework="net45" />
+  <package id="Helios.DedicatedThreadPool" version="0.3.0" targetFramework="net46" />
   <package id="jose-jwt" version="1.9.3" targetFramework="net46" />
   <package id="LibNoise" version="0.2" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
