Added new options for controlling ordering and encryption. Use ordering if precise package handling is required for a server. Fixes to service killer and client.

--- a/src/MiNET/MiNET.ServiceKiller/App.config
+++ b/src/MiNET/MiNET.ServiceKiller/App.config
@@ -51,7 +51,7 @@
 		</appender>
 
 		<root>
-			<level value="WARN"/>
+			<level value="FATAL"/>
 			<!--<appender-ref ref="Console"/>-->
 			<!--<appender-ref ref="RollingFile" />-->
 			<!--<appender-ref ref="DebuggerAppender"/>-->
