--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,28 +1,28 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
-port=19134
-
-#ForwardAllPlayers=true
-#ForwardIP=147.75.194.126
-#ForwardPort=19132
+#port=19134
 
 # Throttling
 #MaxNumberOfPlayers=1
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-UseEncryption=true
+#UseEncryption=false
+#UseEncryptionForAll=false
+#ForceOrderingForAll=false
 
 #EnableStatistics=true
+#EnableSecurity=true
+
 motd=§6§l» §6gurun§7HackingServer§6§l «
 WorldProvider=anvil
 #WorldProvider=flat
-ViewDistance=11
-MaxViewDistance=8
-MoveRenderDistance=1
-GameMode=Survival
+#ViewDistance=11
+#MaxViewDistance=8
+#MoveRenderDistance=1
+#GameMode=Survival
 #GameMode=Creative
-Difficulty=Peaceful
+#Difficulty=Peaceful
 #Difficulty=Easy
 #Difficulty=Normal
 
@@ -50,11 +50,8 @@ PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
-#PCWorldFolder=D:\Development\Worlds\World1\World1
-
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.station
 
-#EnableSecurity=true
 #PluginDirectory=../../../TestPlugin/bin/Release;
 PluginDirectory=../../../TestPlugin/bin/Debug;
 
