--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -15,8 +15,8 @@
 #EnableSecurity=true
 
 motd=§6§l» §6gurun§7HackingServer§6§l «
-#WorldProvider=anvil
-WorldProvider=flat
+WorldProvider=anvil
+#WorldProvider=flat
 #ViewDistance=11
 #MaxViewDistance=8
 #MoveRenderDistance=1
@@ -46,14 +46,14 @@ WorldProvider=flat
 #PCWorldFolder=D:\Downloads\Phain\Phain
 
 # GOOD HUBS
-#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.station
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
-#PluginDirectory=../../../TestPlugin/bin/Debug;
+PluginDirectory=../../../TestPlugin/bin/Debug;
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
