More performance. Added some blocks.

--- a/src/MiNET/MiNET.ServiceKiller/App.config
+++ b/src/MiNET/MiNET.ServiceKiller/App.config
@@ -11,6 +11,15 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
 	</startup>
 
+	<runtime>
+		<gcServer enabled="true"/>
+		<gcConcurrent enabled="true"/>
+
+		<assemblyBinding>
+			<!--<probing aprivatePath="bin;bin2\subbin;bin3"/>-->
+		</assemblyBinding>
+	</runtime>
+
 	<log4net>
 		<appender name="DebuggerAppender" type="log4net.Appender.DebugAppender">
 			<layout type="log4net.Layout.PatternLayout">
