--- a/src/MiNET/MiNET.Client/packages.config
+++ b/src/MiNET/MiNET.Client/packages.config
@@ -4,4 +4,5 @@
   <package id="jose-jwt" version="1.9.3" targetFramework="net46" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.1.0.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
 </packages>
