--- a/src/MiNET/MiNET/packages.config
+++ b/src/MiNET/MiNET/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.1.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="VarintBitConverter" version="1.0.0.0" targetFramework="net461" />
 </packages>
