--- a/src/MiNET/MiNET/packages.config
+++ b/src/MiNET/MiNET/packages.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="fNbt" version="0.6.3" targetFramework="net45" />
   <package id="jose-jwt" version="1.9.3" targetFramework="net46" />
   <package id="LibNoise" version="0.2" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.1.0.0" targetFramework="net46" />
+  <package id="MiNET.fnbt" version="0.6.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="VarintBitConverter" version="1.0.0.0" targetFramework="net461" />
 </packages>
