--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -1,25 +1,25 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
-#ip=0.0.0.0
-#port=19134
+ip=0.0.0.0
+port=19132
 
 # Throttling
-MaxNumberOfPlayers=10000
+#MaxNumberOfPlayers=1
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-UseEncryption=false
+#UseEncryption=false
 #UseEncryptionForAll=false
 #ForceOrderingForAll=false
 
 #EnableStatistics=true
 #EnableSecurity=true
 
-motd=§6§l» §6gurun§7HackingServer§6§l «
-#WorldProvider=anvil
-WorldProvider=flat
-ViewDistance=11
-MaxViewDistance=8
-#MoveRenderDistance=4
+motd=§6§l» §6iToyToy§7MineGame§6§l «
+WorldProvider=anvil
+#WorldProvider=flat
+#ViewDistance=11
+#MaxViewDistance=8
+#MoveRenderDistance=1
 #GameMode=Survival
 GameMode=Creative
 #Difficulty=Peaceful
@@ -28,28 +28,37 @@ GameMode=Creative
 
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWaterOffset=30
+#PCWorldFolder=D:\Development\Worlds\MiniGames\Capture the flag
+#PCWorldFolder=D:\Development\Worlds\MiniGames\Castle Wars
+#PCWorldFolder=D:\Development\Worlds\MiniGames\King of the hill
+#PCWorldFolder=D:\Development\Worlds\MiniGames\Pirate battle
+#PCWorldFolder=D:\Development\Worlds\ShatteredPVP
+#PCWorldFolder=D:\Development\Worlds\KingsLanding
+#PCWorldFolder=D:\Downloads\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama\[CREATIVE]_Eldaria_V3.1_by_Aurelien_Sama
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
+#PCWorldFolder=D:\Development\Worlds\Greenfield v0.4.5
 #PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
 #PCWaterOffset=55
 #PCWorldFolder=D:\Development\Worlds\Sky Wars 2.0 By JJtCool
 #PCWaterOffset=65
+#PCWorldFolder=D:\Development\Worlds\Gladiator Arena by Hypixel\Gladiator Arena - No Counters (Slow Computers)
+#PCWaterOffset=49
 #PCWorldFolder=D:\Downloads\Phain\Phain
-#PCWorldFolder=D:\Downloads\GreatFireOf1666-preFire\GreatFireOf1666-preFireV0.05
-
-#PCWorldFolder=D:\Downloads\Spawn World File (1)\Spawn_World
-#PCWaterOffset=60
 
 # GOOD HUBS
-PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+#PCWorldFolder=world
+PCWorldFolder=C:\appveyor\projects\map\BlockParty
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
+:
+#PCWorldFolder=D:\Development\Repos\MapsPE\sg.station
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
-PluginDirectory=../../../TestPlugin/bin/Debug;
+#PluginDirectory=../../../TestPlugin/bin/Debug; 
+PluginDirectory=C:\appveyor\projects\minet\applications\BlockPartyPlugin
+#PluginDirectory=plugins
 
-#PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
-
-#PluginDisabled=true
+PluginDisabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #Pets.Enabled=false
