--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="fNbt, Version=0.6.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MiNET.fnbt.0.6.3\lib\net35-client\fNbt.dll</HintPath>
+    <Reference Include="fNbt, Version=0.6.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MiNET.fnbt.0.6.5\lib\net35-client\fNbt.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="jose-jwt, Version=1.9.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -548,6 +548,7 @@
     <Compile Include="Utils\OpenSimplex.cs" />
     <Compile Include="Utils\PrefixedArray.cs" />
     <Compile Include="Utils\Ray.cs" />
+    <Compile Include="Utils\StreamExtensions.cs" />
     <Compile Include="Utils\VarInt.cs" />
     <Compile Include="Utils\WannabeRandom.cs" />
     <Compile Include="Utils\TextUtils.cs" />
@@ -567,8 +568,7 @@
     <Compile Include="Utils\MetadataShort.cs" />
     <Compile Include="Utils\MetadataString.cs" />
     <Compile Include="Utils\Nbt.cs" />
-    <Compile Include="Utils\NbtBinaryReader.cs" />
-    <Compile Include="Utils\NbtBinaryWriter.cs" />
+    <Compile Include="Utils\ZLibStream.cs" />
     <Compile Include="Utils\NbtFormatException.cs" />
     <Compile Include="Utils\NibbleArray.cs" />
     <Compile Include="Utils\PlayerLocation.cs" />
