--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -8,13 +8,14 @@ MaxNumberOfPlayers=10000
 #InactivityTimeout=2000
 
 UseEncryption=false
-#UseEncryptionForAll=false
+#UseEncryptionForAll=true
 #ForceOrderingForAll=false
 
 #EnableStatistics=true
 #EnableSecurity=true
 
-motd=§6§l» §6gurun§7HackingServer§6§l «
+motd=§6§l» §r§6gurun§7Hacking§6§l «§r
+motd-2nd=§6MiNET
 #WorldProvider=anvil
 WorldProvider=flat
 ViewDistance=11
