--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Entities\Hostile\ElderGuardian.cs" />
     <Compile Include="Entities\Hostile\Guardian.cs" />
     <Compile Include="Entities\Hostile\Husk.cs" />
+    <Compile Include="Entities\Hostile\SkeletonHorse.cs" />
     <Compile Include="Entities\Hostile\Stray.cs" />
     <Compile Include="Entities\Hostile\WitherSkeleton.cs" />
     <Compile Include="Entities\Projectiles\Arrow.cs" />
