--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -5,10 +5,11 @@
 TracePackets.Include=Mcpe.*
 TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
 TracePackets.Verbosity=0
-TracePackets.Verbosity.McpeAddEntity=0
+TracePackets.Verbosity.McpeAddEntity=1
 TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeAnimate=1
 TracePackets.Verbosity.McpeInteract=1
 TracePackets.Verbosity.McpeUpdateBlock=1
 TracePackets.Verbosity.McpeUseItem=1
+TracePackets.Verbosity.McpeResourcePackDataInfo=1
