Add Missing Blocks / Blocks added in 0.16

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -107,15 +107,29 @@
     <Compile Include="Blocks\Cake.cs" />
     <Compile Include="Blocks\Carpet.cs" />
     <Compile Include="Blocks\Carrots.cs" />
+    <Compile Include="Blocks\Cauldron.cs" />
     <Compile Include="Blocks\Clay.cs" />
     <Compile Include="Blocks\CobblestoneWall.cs" />
     <Compile Include="Blocks\Cobweb.cs" />
     <Compile Include="Blocks\Cocoa.cs" />
     <Compile Include="Blocks\DarkOakDoor.cs" />
+    <Compile Include="Blocks\DoubleRedSandstoneSlab.cs" />
+    <Compile Include="Blocks\Dropper.cs" />
     <Compile Include="Blocks\JungleDoor.cs" />
     <Compile Include="Blocks\LitRedstoneOre.cs" />
     <Compile Include="Blocks\MelonStem.cs" />
+    <Compile Include="Blocks\Observer.cs" />
+    <Compile Include="Blocks\Piston.cs" />
+    <Compile Include="Blocks\PistonHead.cs" />
+    <Compile Include="Blocks\PoweredComparator.cs" />
+    <Compile Include="Blocks\PumpkinStem.cs" />
+    <Compile Include="Blocks\RedSandstone.cs" />
+    <Compile Include="Blocks\RedSandstoneSlab.cs" />
+    <Compile Include="Blocks\RedSandstoneStairs.cs" />
+    <Compile Include="Blocks\Slime.cs" />
     <Compile Include="Blocks\SpruceDoor.cs" />
+    <Compile Include="Blocks\StickyPiston.cs" />
+    <Compile Include="Blocks\UnpoweredComparator.cs" />
     <Compile Include="Blocks\Wheat.cs" />
     <Compile Include="Blocks\RedMushroom.cs" />
     <Compile Include="Blocks\YellowFlower.cs" />
