--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -13,3 +13,5 @@ TracePackets.Verbosity.McpeInteract=1
 TracePackets.Verbosity.McpeUpdateBlock=1
 TracePackets.Verbosity.McpeUseItem=1
 TracePackets.Verbosity.McpeResourcePackDataInfo=1
+TracePackets.Verbosity.McpeAdventureSettings=1
+TracePackets.Verbosity.McpeCommandStep=1
