--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -21,8 +21,10 @@ WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
 #MoveRenderDistance=4
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
+#GameMode=Spectator
+#GameMode=Adventure
 #Difficulty=Peaceful
 #Difficulty=Easy
 #Difficulty=Normal
