Fix dimension change package. Fix spelling on lengthth.

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -16,8 +16,8 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-WorldProvider=anvil
-#WorldProvider=flat
+#WorldProvider=anvil
+WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
 #MoveRenderDistance=4
@@ -34,11 +34,10 @@ GameMode=Survival
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
 #PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
 #PCWaterOffset=55
-PCWorldFolder=D:\Development\Worlds\Sky Wars 2.0 By JJtCool
-PCWaterOffset=65
+#PCWorldFolder=D:\Development\Worlds\Sky Wars 2.0 By JJtCool
+#PCWaterOffset=65
 #PCWorldFolder=D:\Downloads\Phain\Phain
 #PCWorldFolder=D:\Downloads\GreatFireOf1666-preFire\GreatFireOf1666-preFireV0.05
-
 #PCWorldFolder=D:\Downloads\Spawn World File (1)\Spawn_World
 #PCWaterOffset=60
 
