Fix breaking change for 0.16.1 Individual config files, no more commit of my own stuff.

--- a/src/MiNET/MiNET.Service/MiNET.Service.csproj
+++ b/src/MiNET/MiNET.Service/MiNET.Service.csproj
@@ -71,6 +71,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="server.nicke_000.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="server.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
