--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -7,7 +7,7 @@ MaxNumberOfPlayers=10000
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-UseEncryption=false
+#UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 
@@ -16,8 +16,6 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-#WorldProvider=anvil
-WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
 #MoveRenderDistance=4
@@ -29,27 +27,16 @@ GameMode=Survival
 #Difficulty=Easy
 #Difficulty=Normal
 
-#PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
-#PCWaterOffset=30
-#PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
-#PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
-#PCWaterOffset=55
-#PCWorldFolder=D:\Development\Worlds\Sky Wars 2.0 By JJtCool
-#PCWaterOffset=65
-#PCWorldFolder=D:\Downloads\Phain\Phain
-#PCWorldFolder=D:\Downloads\GreatFireOf1666-preFire\GreatFireOf1666-preFireV0.05
-#PCWorldFolder=D:\Downloads\Spawn World File (1)\Spawn_World
-#PCWaterOffset=60
+WorldProvider=flat
+
+#WorldProvider=anvil
 
 # GOOD HUBS
 PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
-#PluginDirectory=../../../TestPlugin/bin/Release;
 PluginDirectory=../../../TestPlugin/bin/Debug;
-
-#PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
