--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,4 +1,4 @@
-#DO NOT REMOVE THIS LINE - MiNET Config
+﻿#DO NOT REMOVE THIS LINE - MiNET Config
 #ip=0.0.0.0
 #port=19134
 
@@ -55,3 +55,18 @@ PluginDirectory=../../../TestPlugin/bin/Debug;
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #Pets.Enabled=false
+
+# REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
+TracePackets.Include=Mcpe.*
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
+TracePackets.Verbosity=0
+TracePackets.Verbosity.McpeAddEntity=0
+TracePackets.Verbosity.McpeAddPlayer=0
+TracePackets.Verbosity.McpePlayerList=0
+TracePackets.Verbosity.McpeAnimate=1
+TracePackets.Verbosity.McpeInteract=1
+TracePackets.Verbosity.McpeUpdateBlock=1
+TracePackets.Verbosity.McpeUseItem=1
+TracePackets.Verbosity.McpeResourcePackDataInfo=1
+TracePackets.Verbosity.McpeAdventureSettings=1
+TracePackets.Verbosity.McpeCommandStep=1
