Some minor cleanup.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -16,8 +16,8 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-WorldProvider=anvil
-#WorldProvider=flat
+#WorldProvider=anvil
+WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
 #MoveRenderDistance=4
