Commands: Tested and works with most if not all datatypes including MCPE specific enumartions, block and selectors. Option parameters supported. Response types supported. Generates command JSON automatically. No permissions support yet.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -21,8 +21,8 @@ WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=8
 #MoveRenderDistance=4
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful
@@ -45,6 +45,8 @@ GameMode=Survival
 PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
+
+EnableCommands=true
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
 PluginDirectory=../../../TestPlugin/bin/Debug;
