--- a/src/MiNET/MiNET.Test/packages.config
+++ b/src/MiNET/MiNET.Test/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
   <package id="jose-jwt" version="1.9.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="MiNET.fnbt" version="0.6.9" targetFramework="net461" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
