--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -16,19 +16,20 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-#WorldProvider=anvil
-WorldProvider=flat
-ViewDistance=11
-MaxViewDistance=8
-#MoveRenderDistance=4
+WorldProvider=anvil
+#WorldProvider=flat
+ViewDistance=22
+MaxViewDistance=11
+MoveRenderDistance=1
 #GameMode=Survival
 GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
-#Difficulty=Peaceful
+#Difficulty=Peaceful	
 #Difficulty=Easy
 #Difficulty=Normal
 
+#PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWaterOffset=30
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
