Update MOTD version to 0.17

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -41,9 +41,10 @@ GameMode=Creative
 #PCWorldFolder=D:\Downloads\GreatFireOf1666-preFire\GreatFireOf1666-preFireV0.05
 #PCWorldFolder=D:\Downloads\Spawn World File (1)\Spawn_World
 #PCWaterOffset=60
+PCWorldFolder=D:\Development\Worlds\SurvivalGamesLobbyx\SurvivalGamesLobbyx
 
 # GOOD HUBS
-PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
