Small restructuring, no changed functionality. Easier for the eye, that's all.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -21,8 +21,8 @@ WorldProvider=flat
 ViewDistance=22
 MaxViewDistance=11
 MoveRenderDistance=1
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
