Partial ligh-calculations. Some breaking changes to chunks/blocks.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -16,10 +16,10 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-#WorldProvider=anvil
-WorldProvider=flat
-ViewDistance=11
-MaxViewDistance=8
+WorldProvider=anvil
+#WorldProvider=flat
+ViewDistance=22
+MaxViewDistance=11
 #MoveRenderDistance=4
 #GameMode=Survival
 GameMode=Creative
@@ -29,6 +29,15 @@ GameMode=Creative
 #Difficulty=Easy
 #Difficulty=Normal
 
+CalculateLights=true
+CalculateLights.MakeMovie=false
+
+# Bad light worlds
+#PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
+PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
+#PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
+
+# Cool worlds for testing
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWaterOffset=30
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
@@ -42,7 +51,7 @@ GameMode=Creative
 #PCWaterOffset=60
 
 # GOOD HUBS
-PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
