--- a/src/MiNET/MiNET.Service/packages.config
+++ b/src/MiNET/MiNET.Service/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="jose-jwt" version="1.9.3" targetFramework="net46" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
+  <package id="SharpAvi" version="2.1.0" targetFramework="net461" />
   <package id="Topshelf" version="3.2.0" targetFramework="net45" />
 </packages>
