Added BuilderBase plugin. Lots of changes to core to fix for commands, blocks and other things. Not too much breaking changes tho..

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -16,9 +16,9 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-WorldProvider=anvil
-#WorldProvider=flat
-ViewDistance=22
+#WorldProvider=anvil
+WorldProvider=flat
+ViewDistance=11
 MaxViewDistance=11
 #MoveRenderDistance=4
 #GameMode=Survival
@@ -29,7 +29,7 @@ GameMode=Creative
 #Difficulty=Easy
 #Difficulty=Normal
 
-CalculateLights=true
+CalculateLights=false
 CalculateLights.MakeMovie=false
 
 # Bad light worlds
@@ -58,14 +58,14 @@ PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
 EnableCommands=true
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
-PluginDirectory=../../../TestPlugin/bin/Debug;
+PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug
 
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
-#CoreCommands.Enabled=false
-#Pets.Enabled=false
+CoreCommands.Enabled=false
+Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 TracePackets.Include=Mcpe.*
